cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# Add executable for main.c
add_executable(main_exec
        basic.c)

# Add executable for even-odd.c
add_executable(even_odd_exec
        even-odd.c)

# Add executable for instant-ramen.c
add_executable(instant_ramen_exec
        instant-ramen.c)

# Add executable for cashback.c
add_executable(cashback_exec
        cashback.c)

# Add executable for frog-party.c
add_executable(frog_party_exec
        frog-party.c)

# Add executable for not-equal.c
add_executable(not_equal_exec
        not-equal.c)

# Add executable for traditional-market.c
add_executable(traditional_market_exec
        traditional-market.c)

# Add executable for are-they-equal.c
add_executable(are_they_equal_exec
        are-they-equal.c)

# Add executable for alphabetical-order.c
add_executable(alphabetical_order_exec
        alphabetical-order.c)

# Add executable for terms-condition.c
add_executable(terms_condition_exec
        terms-condition.c)

# Add executable for three-elevators.c
add_executable(three_elevators_exec
        three-elevators.c)

# Add executable for late-night-counting.c
add_executable(late_night_counting_exec
        late-night-counting.c)

# Add executable for toys.c
add_executable(toys_exec
        toys.c)

# Add executable for candy.c
add_executable(candy_exec
        candy.c)

# Add executable for exclusive-prize.c
add_executable(exclusive_prize_exec
        exclusive-prize.c)

# Add executable for jellyfish-dance.c
add_executable(jellyfish_dance_exec
        jellyfish-dance.c)

# Add executable for hotel.c
add_executable(hotel_exec
        hotel.c)

# Add executable for matrix.c
add_executable(matrix_exec
        matrix.c)

# Add executable for love-for-parents.c
add_executable(love_for_parents_exec
        love-for-parents.c)

# Add executable for sum.c
add_executable(sum_exec
        sum.c)

# Add executable for all-the-wind.c
add_executable(all_the_wind_exec
        all-the-wind.c)

# Add executable for night-game.c
add_executable(night_game_exec
        night-game.c)

# Add executable for char-to-ascii.c
add_executable(char_to_ascii_exec
        char-to-ascii.c)

# Add executable for reverse-string.c
add_executable(reverse_string_exec
        reverse-string.c)

# Add executable for array.c
add_executable(array_exec
        array.c)

# Add executable for colsum.c
add_executable(colsum_exec
        colsum.c)

# Add executable for maximum.c
add_executable(maximum_exec
        maximum.c)

# Add executable for attendence.c
add_executable(attendence_exec
        attendence.c)

# Add executable for box-of-chocolate.c
add_executable(box_of_chocolate_exec
        box-of-chocolate.c)

# Add executable for get-some-results.c
add_executable(get_some_results_exec
        get-some-results.c)