cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# Add executable for main.c
add_executable(main_exec basic.c)

# Add executable for even-odd.c
add_executable(even_odd_exec even-odd.c)

# Add executable for instant-ramen.c
add_executable(instant_ramen_exec instant-ramen.c)

# Add executable for cashback.c
add_executable(cashback_exec cashback.c)

# Add executable for frog-party.c
add_executable(frog_party_exec frog-party.c)

# Add executable for not-equal.c
add_executable(not_equal_exec not-equal.c)

# Add executable for traditional-market.c
add_executable(traditional_market_exec traditional-market.c)

# Add executable for are-they-equal.c
add_executable(are_they_equal_exec are-they-equal.c)

# Add executable for alphabetical-order.c
add_executable(alphabetical_order_exec alphabetical-order.c)

# Add executable for terms-condition.c
add_executable(terms_condition_exec terms-condition.c)

# Add executable for three-elevators.c
add_executable(three_elevators_exec three-elevators.c)

# Add executable for late-night-counting.c
add_executable(late_night_counting_exec late-night-counting.c)

# Add executable for toys.c
add_executable(toys_exec toys.c)

# Add executable for candy.c
add_executable(candy_exec candy.c)

# Add executable for exclusive-prize.c
add_executable(exclusive_prize_exec exclusive-prize.c)

# Add executable for jellyfish-dance.c
add_executable(jellyfish_dance_exec jellyfish-dance.c)

# Add executable for hotel.c
add_executable(hotel_exec hotel.c)

# Add executable for matrix.c
add_executable(matrix_exec matrix.c)

# Add executable for love-for-parents.c
add_executable(love_for_parents_exec love-for-parents.c)

# Add executable for sum.c
add_executable(sum_exec sum.c)

# Add executable for all-the-wind.c
add_executable(all_the_wind_exec all-the-wind.c)

# Add executable for night-game.c
add_executable(night_game_exec night-game.c)

# Add executable for char-to-ascii.c
add_executable(char_to_ascii_exec char-to-ascii.c)

# Add executable for reverse-string.c
add_executable(reverse_string_exec reverse-string.c)

# Add executable for array.c
add_executable(array_exec array.c)

# Add executable for colsum.c
add_executable(colsum_exec colsum.c)

# Add executable for maximum.c
add_executable(maximum_exec maximum.c)

# Add executable for attendence.c
add_executable(attendence_exec attendence.c)

# Add executable for box-of-chocolate.c
add_executable(box_of_chocolate_exec box-of-chocolate.c)

# Add executable for get-some-results.c
add_executable(get_some_results_exec get-some-results.c)

# Add executable for star.c
add_executable(star_exec star.c)

# Add executable for playing-snake-and-ladders.c
add_executable(playing_snake_and_ladders_exec playing-snake-and-ladders.c)

# Add executable for pencil-case.c
add_executable(pencil_case_exec pencil-case.c)

# Add executable for binary-three.c
add_executable(binary_three_exec binary-three.c)

# Add executable for pancakes.c
add_executable(pancakes_exec pancakes.c)

# Add executable for length.c
add_executable(length_exec length.c)

# Add executable for split.c
add_executable(split_exec split.c)

# Add executable for borrowing-money.c
add_executable(borrowing_money_exec borrowing-money.c)

# Add executable for climbing-stairs.c
add_executable(climbing_stairs_exec climbing-stairs.c)

# Add executable for dragon-slayer.c
add_executable(dragon_slayer_exec dragon-slayer.c)

# Add executable for count-and-count.c
add_executable(count_and_count_exec count-and-count.c)

# Add executable for lightning.c
add_executable(lightning_exec lightning.c)

# Add executable for cursed-triangle.c
add_executable(cursed_triangle_exec cursed-triangle.c)

# Add executable for hard-problem.c
add_executable(hard_problem_exec hard-problem.c)

# Add executable for jojo-draw-triangles.c
add_executable(jojo_draw_triangles_exec jojo-draw-triangles.c)

# Add executable for colorful-alphabet.c
add_executable(colorful_alphabet_exec colorful-alphabet.c)

# Add executable for more-addition.c
add_executable(more_addition_exec more-addition.c)

# Add executable for present.c
add_executable(present_exec present.c)

# Add executable for stonks.c
add_executable(stonks_exec stonks.c)

# Add executable for smart-student.c
add_executable(smart-student smart-student.c)

# Add executable for jojo-and-arithmetic-progression.c
add_executable(jojo-and-arithmetic-progression jojo-and-arithmetic-progression.c)

# Add executable for learning-binary.c
add_executable(learning-binary learning-binary.c)

# Add executable for three-patterns.c
add_executable(three-patterns three-patterns.c)

# Add executable for zoo.c
add_executable(zoo zoo.c)

# Add executable for square.c
add_executable(square square.c)

# Add executable for jolibi.c
add_executable(jolibi jolibi.c)

# Add executable for items.c
add_executable(items items.c)

# Add executable for free-food.c
add_executable(free-food free-food.c)

# Add executable for thai-tea.c
add_executable(thai-tea thai-tea.c)

# Add executable for frogger-race.c
add_executable(frogger-race frogger-race.c)

# Add executable for baloons.c
add_executable(baloons baloons.c)

# Add executable for clarify.c
add_executable(clarify clarify.c)

# Add executable for games.c
add_executable(games games.c)

# Add executable for odd-and-even.c
add_executable(odd-and-even odd-and-even.c)

# Add executable for enough-okay-perfect.c
add_executable(enough-okay-perfect enough-okay-perfect.c)

# Add executable for playing-monopoly.c
add_executable(playing-monopoly playing-monopoly.c)

# Add executable for photo.c
add_executable(photo photo.c)

# Add executable for weird-shape.c
add_executable(weird-shape weird-shape.c)

# Add executable for triangle.c
add_executable(triangle triangle.c)

# Add executable for idontwannabeyouanymore.c
add_executable(idontwannabeyouanymore idontwannabeyouanymore.c)