cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# Add executable for main.c
add_executable(main_exec socs/algoprog/practice/basic.c)

# Add executable for even-odd.c
add_executable(even_odd_exec socs/algoprog/selection/even-odd.c)

# Add executable for instant-ramen.c
add_executable(instant_ramen_exec socs/algoprog/selection/instant-ramen.c)

# Add executable for cashback.c
add_executable(cashback_exec socs/algoprog/selection/cashback.c)

# Add executable for frog-party.c
add_executable(frog_party_exec socs/algoprog/selection/frog-party.c)

# Add executable for not-equal.c
add_executable(not_equal_exec socs/algoprog/selection/not-equal.c)

# Add executable for traditional-market.c
add_executable(traditional_market_exec socs/algoprog/selection/traditional-market.c)

# Add executable for are-they-equal.c
add_executable(are_they_equal_exec socs/algoprog/selection/are-they-equal.c)

# Add executable for alphabetical-order.c
add_executable(alphabetical_order_exec socs/algoprog/selection/alphabetical-order.c)

# Add executable for terms-condition.c
add_executable(terms_condition_exec socs/algoprog/selection/terms-condition.c)

# Add executable for three-elevators.c
add_executable(three_elevators_exec socs/algoprog/selection/three-elevators.c)

# Add executable for late-night-counting.c
add_executable(late_night_counting_exec socs/algoprog/repetition/late-night-counting.c)

# Add executable for toys.c
add_executable(toys_exec socs/algoprog/repetition/toys.c)

# Add executable for candy.c
add_executable(candy_exec socs/algoprog/repetition/candy.c)

# Add executable for exclusive-prize.c
add_executable(exclusive_prize_exec socs/algoprog/repetition/exclusive-prize.c)

# Add executable for jellyfish-dance.c
add_executable(jellyfish_dance_exec socs/algoprog/pointer-array/jellyfish-dance.c)

# Add executable for hotel.c
add_executable(hotel_exec socs/algoprog/pointer-array/hotel.c)

# Add executable for matrix.c
add_executable(matrix_exec socs/algoprog/practice/matrix.c)

# Add executable for love-for-parents.c
add_executable(love_for_parents_exec socs/algoprog/pointer-array/love-for-parents.c)

# Add executable for sum.c
add_executable(sum_exec socs/algoprog/pointer-array/sum.c)

# Add executable for all-the-wind.c
add_executable(all_the_wind_exec socs/algoprog/pointer-array/all-the-wind.c)

# Add executable for night-game.c
add_executable(night_game_exec socs/algoprog/pointer-array/night-game.c)

# Add executable for char-to-ascii.c
add_executable(char_to_ascii_exec socs/algoprog/pointer-array/char-to-ascii.c)

# Add executable for reverse-string.c
add_executable(reverse_string_exec socs/algoprog/pointer-array/reverse-string.c)

# Add executable for array.c
add_executable(array_exec socs/algoprog/pointer-array/array.c)

# Add executable for colsum.c
add_executable(colsum_exec socs/algoprog/pointer-array/colsum.c)

# Add executable for maximum.c
add_executable(maximum_exec socs/algoprog/pointer-array/maximum.c)

# Add executable for attendence.c
add_executable(attendence_exec socs/algoprog/pointer-array/attendence.c)

# Add executable for box-of-chocolate.c
add_executable(box_of_chocolate_exec socs/algoprog/pointer-array/box-of-chocolate.c)

# Add executable for get-some-results.c
add_executable(get_some_results_exec socs/algoprog/pointer-array/get-some-results.c)

# Add executable for star.c
add_executable(star_exec socs/algoprog/practice/star.c)

# Add executable for playing-snake-and-ladders.c
add_executable(playing_snake_and_ladders_exec socs/algoprog/repetition/playing-snake-and-ladders.c)

# Add executable for pencil-case.c
add_executable(pencil_case_exec socs/algoprog/repetition/pencil-case.c)

# Add executable for binary-three.c
add_executable(binary_three_exec socs/algoprog/repetition/binary-three.c)

# Add executable for pancakes.c
add_executable(pancakes_exec socs/algoprog/repetition/pancakes.c)

# Add executable for length.c
add_executable(length_exec socs/algoprog/repetition/length.c)

# Add executable for split.c
add_executable(split_exec socs/algoprog/repetition/split.c)

# Add executable for borrowing-money.c
add_executable(borrowing_money_exec socs/algoprog/repetition/borrowing-money.c)

# Add executable for climbing-stairs.c
add_executable(climbing_stairs_exec socs/algoprog/repetition/climbing-stairs.c)

# Add executable for dragon-slayer.c
add_executable(dragon_slayer_exec socs/algoprog/repetition/dragon-slayer.c)

# Add executable for count-and-count.c
add_executable(count_and_count_exec socs/algoprog/repetition/count-and-count.c)

# Add executable for lightning.c
add_executable(lightning_exec socs/algoprog/repetition/lightning.c)

# Add executable for cursed-triangle.c
add_executable(cursed_triangle_exec socs/algoprog/repetition/cursed-triangle.c)

# Add executable for hard-problem.c
add_executable(hard_problem_exec socs/algoprog/repetition/hard-problem.c)

# Add executable for jojo-draw-triangles.c
add_executable(jojo_draw_triangles_exec socs/algoprog/repetition/jojo-draw-triangles.c)

# Add executable for colorful-alphabet.c
add_executable(colorful_alphabet_exec socs/algoprog/repetition/colorful-alphabet.c)

# Add executable for more-addition.c
add_executable(more_addition_exec socs/algoprog/repetition/more-addition.c)

# Add executable for present.c
add_executable(present_exec socs/algoprog/repetition/present.c)

# Add executable for stonks.c
add_executable(stonks_exec socs/algoprog/repetition/stonks.c)

# Add executable for smart-student.c
add_executable(smart-student socs/algoprog/repetition/smart-student.c)

# Add executable for jojo-and-arithmetic-progression.c
add_executable(jojo-and-arithmetic-progression socs/algoprog/repetition/jojo-and-arithmetic-progression.c)

# Add executable for learning-binary.c
add_executable(learning-binary socs/algoprog/repetition/learning-binary.c)

# Add executable for three-patterns.c
add_executable(three-patterns socs/algoprog/repetition/three-patterns.c)

# Add executable for zoo.c
add_executable(zoo socs/algoprog/repetition/zoo.c)

# Add executable for square.c
add_executable(square socs/algoprog/repetition/square.c)

# Add executable for jolibi.c
add_executable(jolibi socs/algoprog/repetition/jolibi.c)

# Add executable for items.c
add_executable(items socs/algoprog/repetition/items.c)

# Add executable for free-food.c
add_executable(free-food socs/algoprog/repetition/free-food.c)

# Add executable for thai-tea.c
add_executable(thai-tea socs/algoprog/repetition/thai-tea.c)

# Add executable for frogger-race.c
add_executable(frogger-race socs/algoprog/repetition/frogger-race.c)

# Add executable for baloons.c
add_executable(baloons socs/algoprog/repetition/baloons.c)

# Add executable for clarify.c
add_executable(clarify socs/algoprog/repetition/clarify.c)

# Add executable for games.c
add_executable(games socs/algoprog/repetition/games.c)

# Add executable for odd-and-even.c
add_executable(odd-and-even socs/algoprog/repetition/odd-and-even.c)

# Add executable for enough-okay-perfect.c
add_executable(enough-okay-perfect socs/algoprog/repetition/enough-okay-perfect.c)

# Add executable for playing-monopoly.c
add_executable(playing-monopoly socs/algoprog/repetition/playing-monopoly.c)

# Add executable for photo.c
add_executable(photo socs/algoprog/repetition/photo.c)

# Add executable for weird-shape.c
add_executable(weird-shape socs/algoprog/repetition/weird-shape.c)

# Add executable for triangle.c
add_executable(triangle socs/algoprog/repetition/triangle.c)

# Add executable for idontwannabeyouanymore.c
add_executable(idontwannabeyouanymore socs/algoprog/repetition/idontwannabeyouanymore.c)

# Add executable for bibi-residence.c
add_executable(bibi-residence socs/algoprog/repetition/bibi-residence.c)

# Add executable for reading-book.c
add_executable(reading-book socs/algoprog/repetition/reading-book.c)

# Add executable for stay-or-swap.c
add_executable(stay-or-swap socs/algoprog/repetition/stay-or-swap.c)

# Add executable for pigwkizqixisiuc.c
add_executable(pigwkizqixisiuc socs/algoprog/repetition/pigwkizqixisiuc.c)

# Add executable for ip-man.c
add_executable(ip-man socs/algoprog/repetition/ip-man.c)

# Add executable for strings.c
add_executable(strings socs/algoprog/practice/strings.c)

# Add executable for recursion.c
add_executable(recursion socs/algoprog/recursion/recursion.c)

# Add executable for ackerman-function.c
add_executable(ackerman-function socs/algoprog/recursion/ackerman-function.c)

# Add executable for till-one.c
add_executable(till-one socs/algoprog/recursion/till-one.c)

# Add executable for team-trees.c
add_executable(team-trees socs/algoprog/recursion/team-trees.c)

# Add executable for eltit-a-si-sihT.c
add_executable(eltit-a-si-sihT socs/algoprog/recursion/eltit-a-si-sihT.c)

# Add executable for a-man-a-plan-a-canal-panama.c
add_executable(a-man-a-plan-a-canal-panama socs/algoprog/recursion/a-man-a-plan-a-canal-panama.c)

# Add executable for fibo-string.c
add_executable(fibo-string socs/algoprog/recursion/fibo-string.c)

# Add executable for fibo-count.c
add_executable(fibo-count socs/algoprog/recursion/fibo-count.c)

# Add executable for epic-game.c
add_executable(epic-game socs/algoprog/recursion/epic-game.c)

# Add executable for not-fibonacci.c
add_executable(not-fibonacci socs/algoprog/recursion/not-fibonacci.c)

# Add executable for garden.c
add_executable(garden socs/algoprog/pointer-array/garden.c)

# Add executable for test.c
add_executable(test socs/algoprog/repetition/test.c)