cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# input output executable
add_executable(input-output-helloworld input-output/helloworld.c)
add_executable(input-output-late-night-counting input-output/late-night-counting.c)
add_executable(input-output-binus-ftw input-output/binus-ftw.c)
add_executable(input-output-hello-maba input-output/hello-maba.c)
add_executable(input-output-basic-in-out input-output/basic-in-out.c)
add_executable(input-output-birthday input-output/birthday.c)
add_executable(input-output-congratulation input-output/congratulation.c)
add_executable(input-output-hex-hex-hex input-output/hex-hex-hex.c)
add_executable(input-output-new-student input-output/new-student.c)
add_executable(input-output-happy-birthday input-output/happy-birthday.c)
add_executable(input-output-oct-oct-oct input-output/oct-oct-oct.c)
add_executable(input-output-sky-diving input-output/sky-diving.c)
add_executable(input-output-the-national-anthem input-output/the-national-anthem.c)
add_executable(input-output-isekai input-output/isekai.c)
add_executable(input-output-greetings input-output/greetings.c)
add_executable(input-output-the-registration-begin input-output/the-registration-begin.c)
add_executable(input-output-print-the-code input-output/print-the-code.c)

add_executable(repetition-late-night-counting repetition/late-night-counting.c)