cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# input output executable
add_executable(input-output-helloworld input-output/helloworld.c)
add_executable(input-output-late-night-counting input-output/late-night-counting.c)
add_executable(input-output-binus-ftw input-output/binus-ftw.c)
add_executable(input-output-hello-maba input-output/hello-maba.c)
add_executable(input-output-basic-in-out input-output/basic-in-out.c)
add_executable(input-output-birthday input-output/birthday.c)
add_executable(input-output-congratulation input-output/congratulation.c)
add_executable(input-output-hex-hex-hex input-output/hex-hex-hex.c)
add_executable(input-output-new-student input-output/new-student.c)
add_executable(input-output-happy-birthday input-output/happy-birthday.c)
add_executable(input-output-oct-oct-oct input-output/oct-oct-oct.c)
add_executable(input-output-sky-diving input-output/sky-diving.c)
add_executable(input-output-the-national-anthem input-output/the-national-anthem.c)
add_executable(input-output-isekai input-output/isekai.c)
add_executable(input-output-greetings input-output/greetings.c)
add_executable(input-output-the-registration-begin input-output/the-registration-begin.c)
add_executable(input-output-print-the-code input-output/print-the-code.c)

# arithmetic executable
add_executable(arithmetic-add-two-number arithmetic/add-two-number.c)
add_executable(arithmetic-final-score arithmetic/final-score.c)
add_executable(arithmetic-stronger arithmetic/stronger.c)
add_executable(arithmetic-game-tournaments arithmetic/game-tournaments.c)
add_executable(arithmetic-damage arithmetic/damage.c)
add_executable(arithmetic-wosu arithmetic/wosu.c)
add_executable(arithmetic-subtraction arithmetic/subtraction.c)
add_executable(arithmetic-modulus arithmetic/modulus.c)
add_executable(arithmetic-jojo-and-arithmetic-progression arithmetic/jojo-and-arithmetic-progression.c)
add_executable(arithmetic-arithmetic arithmetic/arithmetic.c)
add_executable(arithmetic-addition arithmetic/addition.c)
add_executable(arithmetic-ascii-products arithmetic/ascii-products.c)
add_executable(arithmetic-square-sum arithmetic/square-sum.c)
add_executable(arithmetic-quick-maths arithmetic/quick-maths.c)
add_executable(arithmetic-i-am-not-a-robot arithmetic/i-am-not-a-robot.c)
add_executable(arithmetic-saving arithmetic/saving.c)
add_executable(arithmetic-pokemon-card arithmetic/pokemon-card.c)
add_executable(arithmetic-pokemon-card-part-2 arithmetic/pokemon-card-part-2.c)
add_executable(arithmetic-discount arithmetic/discount.c)
add_executable(arithmetic-competition arithmetic/competition.c)
add_executable(arithmetic-shopping arithmetic/shopping.c)
add_executable(arithmetic-fierce-match arithmetic/fierce-match.c)
add_executable(arithmetic-math-homeworks arithmetic/math-homeworks.c)
add_executable(arithmetic-present-from-lili arithmetic/present-from-lili.c)
add_executable(arithmetic-bibi-class-schedule arithmetic/bibi-class-schedule.c)
add_executable(arithmetic-counting-clocks arithmetic/counting-clocks.c)
add_executable(arithmetic-thermostater arithmetic/thermostater.c)
add_executable(arithmetic-middle-man arithmetic/middle-man.c)
add_executable(arithmetic-triplier arithmetic/triplier.c)
add_executable(arithmetic-percentage arithmetic/percentage.c)
add_executable(arithmetic-diamond-sum arithmetic/diamond-sum.c)

add_executable(repetition-late-night-counting repetition/late-night-counting.c)