cmake_minimum_required(VERSION 3.29)
project(fundamental C)

set(CMAKE_C_STANDARD 11)

# aol executable
add_executable(aol-csv-file aol/csv-file.c)

# practice executable
add_executable(practice-basic practice/basic.c)
add_executable(practice-matrix practice/matrix.c)
add_executable(practice-star practice/star.c)
add_executable(practice-strings practice/strings.c)
add_executable(practice-bubble-sort practice/bubble-sort.c)
add_executable(practice-selection-sort practice/selection-sort.c)
add_executable(practice-merge-sort practice/merge-sort.c)
add_executable(practice-linear-search practice/linear-search.c)
add_executable(practice-binary-search practice/binary-search.c)
add_executable(practice-test practice/test.c)

# input output executable
add_executable(input-output-helloworld input-output/helloworld.c)
add_executable(input-output-late-night-counting input-output/late-night-counting.c)
add_executable(input-output-binus-ftw input-output/binus-ftw.c)
add_executable(input-output-hello-maba input-output/hello-maba.c)
add_executable(input-output-basic-in-out input-output/basic-in-out.c)
add_executable(input-output-birthday input-output/birthday.c)
add_executable(input-output-congratulation input-output/congratulation.c)
add_executable(input-output-hex-hex-hex input-output/hex-hex-hex.c)
add_executable(input-output-new-student input-output/new-student.c)
add_executable(input-output-happy-birthday input-output/happy-birthday.c)
add_executable(input-output-oct-oct-oct input-output/oct-oct-oct.c)
add_executable(input-output-sky-diving input-output/sky-diving.c)
add_executable(input-output-the-national-anthem input-output/the-national-anthem.c)
add_executable(input-output-isekai input-output/isekai.c)
add_executable(input-output-greetings input-output/greetings.c)
add_executable(input-output-the-registration-begin input-output/the-registration-begin.c)
add_executable(input-output-print-the-code input-output/print-the-code.c)

# arithmetic executable
add_executable(arithmetic-add-two-number arithmetic/add-two-number.c)
add_executable(arithmetic-final-score arithmetic/final-score.c)
add_executable(arithmetic-stronger arithmetic/stronger.c)
add_executable(arithmetic-game-tournaments arithmetic/game-tournaments.c)
add_executable(arithmetic-damage arithmetic/damage.c)
add_executable(arithmetic-wosu arithmetic/wosu.c)
add_executable(arithmetic-subtraction arithmetic/subtraction.c)
add_executable(arithmetic-modulus arithmetic/modulus.c)
add_executable(arithmetic-jojo-and-arithmetic-progression arithmetic/jojo-and-arithmetic-progression.c)
add_executable(arithmetic-arithmetic arithmetic/arithmetic.c)
add_executable(arithmetic-addition arithmetic/addition.c)
add_executable(arithmetic-ascii-products arithmetic/ascii-products.c)
add_executable(arithmetic-square-sum arithmetic/square-sum.c)
add_executable(arithmetic-quick-maths arithmetic/quick-maths.c)
add_executable(arithmetic-i-am-not-a-robot arithmetic/i-am-not-a-robot.c)
add_executable(arithmetic-saving arithmetic/saving.c)
add_executable(arithmetic-pokemon-card arithmetic/pokemon-card.c)
add_executable(arithmetic-pokemon-card-part-2 arithmetic/pokemon-card-part-2.c)
add_executable(arithmetic-discount arithmetic/discount.c)
add_executable(arithmetic-competition arithmetic/competition.c)
add_executable(arithmetic-shopping arithmetic/shopping.c)
add_executable(arithmetic-fierce-match arithmetic/fierce-match.c)
add_executable(arithmetic-math-homeworks arithmetic/math-homeworks.c)
add_executable(arithmetic-present-from-lili arithmetic/present-from-lili.c)
add_executable(arithmetic-bibi-class-schedule arithmetic/bibi-class-schedule.c)
add_executable(arithmetic-counting-clocks arithmetic/counting-clocks.c)
add_executable(arithmetic-thermostater arithmetic/thermostater.c)
add_executable(arithmetic-middle-man arithmetic/middle-man.c)
add_executable(arithmetic-triplier arithmetic/triplier.c)
add_executable(arithmetic-percentage arithmetic/percentage.c)
add_executable(arithmetic-diamond-sum arithmetic/diamond-sum.c)

# selection executable
add_executable(selection-odd-even-number selection/odd-even-number.c)
add_executable(selection-instant-ramen-life-hack selection/instant-ramen-life-hack.c)
add_executable(selection-cashback selection/cashback.c)
add_executable(selection-frog-party selection/frog-party.c)
add_executable(selection-not-equal selection/not-equal.c)
add_executable(selection-traditional-market selection/traditional-market.c)
add_executable(selection-are-they-equal selection/are-they-equal.c)
add_executable(selection-alphabetical-order selection/alphabetical-order.c)
add_executable(selection-terms-and-condition-apply selection/terms-and-condition-apply.c)
add_executable(selection-three-elevators selection/three-elevators.c)

# repetition executable
add_executable(repetition-late-night-counting repetition/late-night-counting.c)
add_executable(repetition-playing-snake-and-ladders repetition/playing-snake-and-ladders.c)
add_executable(repetition-toys repetition/toys.c)
add_executable(repetition-candy repetition/candy.c)
add_executable(repetition-exclusive-prize repetition/exclusive-prize.c)
add_executable(repetition-pencil-case repetition/pencil-case.c)
add_executable(repetition-binary-three repetition/binary-three.c)
add_executable(repetition-pancakes repetition/pancakes.c)
add_executable(repetition-length repetition/length.c)
add_executable(repetition-split repetition/split.c)
add_executable(repetition-borrowing-money repetition/borrowing-money.c)
add_executable(repetition-climbing-stairs repetition/climbing-stairs.c)
add_executable(repetition-dragon-slayer repetition/dragon-slayer.c)
add_executable(repetition-count-and-count repetition/count-and-count.c)
add_executable(repetition-lightning repetition/lightning.c)
add_executable(repetition-idontwannabeyouanymore repetition/idontwannabeyouanymore.c)
add_executable(repetition-pigwkizqixisiuc repetition/pigwkizqixisiuc.c)
add_executable(repetition-ip-man repetition/ip-man.c)
add_executable(repetition-cursed-triangle repetition/cursed-triangle.c)
add_executable(repetition-hard-problem repetition/hard-problem.c)
add_executable(repetition-jojo-draw-triangles repetition/jojo-draw-triangles.c)
add_executable(repetition-colorful-alphabet repetition/colorful-alphabet.c)
add_executable(repetition-more-addition repetition/more-addition.c)
add_executable(repetition-present repetition/present.c)
add_executable(repetition-stonks repetition/stonks.c)
add_executable(repetition-smart-student repetition/smart-student.c)
add_executable(repetition-jojo-and-arithmetic-progression repetition/jojo-and-arithmetic-progression.c)
add_executable(repetition-guess-the-number repetition/guess-the-number.c)
add_executable(repetition-learning-binary repetition/learning-binary.c)
add_executable(repetition-three-patterns repetition/three-patterns.c)
add_executable(repetition-zoo repetition/zoo.c)
add_executable(repetition-square repetition/square.c)
add_executable(repetition-jolibi repetition/jolibi.c)
add_executable(repetition-items repetition/items.c)
add_executable(repetition-triangle repetition/triangle.c)
add_executable(repetition-honey repetition/honey.c)
add_executable(repetition-free-food repetition/free-food.c)
add_executable(repetition-thai-tea repetition/thai-tea.c)
add_executable(repetition-stay-or-swap repetition/stay-or-swap.c)
add_executable(repetition-frogger-race repetition/frogger-race.c)
add_executable(repetition-reading-book repetition/reading-book.c)
add_executable(repetition-bibi-residence repetition/bibi-residence.c)
add_executable(repetition-baloons repetition/baloons.c)
add_executable(repetition-clarify repetition/clarify.c)
add_executable(repetition-games repetition/games.c)
add_executable(repetition-weird-shape repetition/weird-shape.c)
add_executable(repetition-odd-and-even repetition/odd-and-even.c)
add_executable(repetition-enough-okay-perfect repetition/enough-okay-perfect.c)
add_executable(repetition-photo repetition/photo.c)
add_executable(repetition-playing-monopoly repetition/playing-monopoly.c)

# pointer-array executable
add_executable(pointer-array-jellyfish-dance pointer-array/jellyfish-dance.c)
add_executable(pointer-array-hotel pointer-array/hotel.c)
add_executable(pointer-array-get-some-results pointer-array/get-some-results.c)
add_executable(pointer-array-what-did-i-do-wrong pointer-array/what-did-i-do-wrong.c)
add_executable(pointer-array-love-for-parents pointer-array/love-for-parents.c)
add_executable(pointer-array-garden pointer-array/garden.c)
add_executable(pointer-array-sum pointer-array/sum.c)
add_executable(pointer-array-girl pointer-array/girl.c)
add_executable(pointer-array-starship-crusader pointer-array/starship-crusader.c)
add_executable(pointer-array-all-the-wind pointer-array/all-the-wind.c)
add_executable(pointer-array-night-game pointer-array/night-game.c)
add_executable(pointer-array-char-to-ascii pointer-array/char-to-ascii.c)
add_executable(pointer-array-reverse-string pointer-array/reverse-string.c)
add_executable(pointer-array-array pointer-array/array.c)
add_executable(pointer-array-colsum pointer-array/colsum.c)
add_executable(pointer-array-maximum pointer-array/maximum.c)
add_executable(pointer-array-puzzle pointer-array/puzzle.c)
add_executable(pointer-array-attendence pointer-array/attendence.c)
add_executable(pointer-array-light pointer-array/light.c)
add_executable(pointer-array-playing-with-string pointer-array/playing-with-string.c)
add_executable(pointer-array-clever-math pointer-array/clever-math.c)
add_executable(pointer-array-best-message pointer-array/best-message.c)
add_executable(pointer-array-match pointer-array/match.c)
add_executable(pointer-array-world-record-egg pointer-array/world-record-egg.c)
add_executable(pointer-array-summer-vacation pointer-array/summer-vacation.c)
add_executable(pointer-array-box-of-chocolate pointer-array/box-of-chocolate.c)
add_executable(pointer-array-secret-code pointer-array/secret-code.c)
add_executable(pointer-array-emergency-exit pointer-array/emergency-exit.c)

# file executable
add_executable(file-planting-tree file/planting-tree.c)
add_executable(file-bad-prank file/bad-prank.c)
add_executable(file-a-plus-b file/a-plus-b.c)
add_executable(file-alphabet-converter file/alphabet-converter.c)
add_executable(file-ice file/ice.c)

# sorting executable
add_executable(sorting-sorting sorting/sorting.c)
add_executable(sorting-plant-sorting sorting/plant-sorting.c)
add_executable(sorting-student-sorting sorting/student-sorting.c)
add_executable(sorting-top-viewer sorting/top-viewer.c)
add_executable(sorting-temperature sorting/temperature.c)
add_executable(sorting-lili-and-deadlines sorting/lili-and-deadlines.c)
add_executable(sorting-christmas-train sorting/christmas-train.c)
add_executable(sorting-grid-of-letters sorting/grid-of-letters.c)
add_executable(sorting-2-rows-theatre sorting/2-rows-theatre.c)
add_executable(sorting-i-love-statistics sorting/i-love-statistics.c)

# searching executable
add_executable(searching-file searching/file.c)